// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio > should apply the correct styles, HTMLAttributes, and allow a ref 1`] = `
<div>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
  >
    Radio
    <span
      class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        class="rmd-hidden-input"
        id="radio-_r_0_"
        type="radio"
        value="a"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_unchecked
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </span>
    </span>
  </label>
</div>
`;

exports[`Radio > should apply the correct styles, HTMLAttributes, and allow a ref 2`] = `
<div>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed custom-class-name"
    style="color: white;"
  >
    Radio
    <span
      class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        class="rmd-hidden-input"
        id="radio-_r_0_"
        type="radio"
        value="a"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_unchecked
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </span>
    </span>
  </label>
</div>
`;

exports[`Radio > should apply the correct styles, HTMLAttributes, and allow a ref 3`] = `
<div>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
    style=""
  >
    Radio
    <span
      class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        class="rmd-hidden-input"
        id="custom-id"
        type="radio"
        value="a"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_unchecked
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </span>
    </span>
  </label>
</div>
`;
